# servo_aligner

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
app/: _bootstrap.py  calibrate_jacobian.py  clip_scan.py  init_helper.py  servo_server.py  tui.py  zmq_server.py
config/: README.md  calibration.template.yaml  example_config.yaml  machine.template.yaml  servo_aligner.template.yaml
doc/: README.md  application.md  customize.template.py  instructions.txt  jacobian.md  migration.md  mirror_mounts.md  motor.md  optimize.md  servo_server.md  servos_template.json  simulation.md  spiral.md  usage.md
example/: README.md
example/notebooks/: test.ipynb  (+2 more)
servo_aligner/: README.md  config.py  plotting.py
src/: README.md  STSServer.py  SequenceProcessor.py  ServerClass.py  calibrate_jacobian.py  calibration.template.yaml  callback_func.py  callback_functions.py  clip_scan.py  config.py  customize.py  datastore.py  fit_gaussian.py  init_helper.py  machine.template.yaml  motor_scan.py  numeric_sim.py  optimize.py  pd.py  plot_csv.py  pts_iterator.py  sequence.py  servo_const.py  servo_server.py  servo_util.py  servodriver.py  servos_0.json  spiral.py  step_optimize.py  sync_read_write.py  tui.py  zmq_server.py
tests/: README.md  conftest.py  fake_bus.py  test_beam_model.py  test_channels.py  test_compose_para.py  test_config.py  test_fitting.py  test_imports.py  test_optimize_stack.py  test_raster.py  test_routines_cli.py  test_server_adapter.py  test_simulation_e2e.py  test_spiral.py  test_sts3032_actuator.py  test_vectors.py
(+44 files in other folders)
